fix auto close tree table

--- a/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
+++ b/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
@@ -968,6 +968,8 @@
       [style]="{ 'min-width': '50rem' }"
       scrollHeight="600px"
       class="tree-table"
+      (onNodeExpand)="onNodeExpand($event)"
+      (onNodeCollapse)="onNodeCollapse($event)"
     >
       <ng-template pTemplate="caption">
         <div class="d-flex justify-content-between align-items-center">
